# vgi-statsmodels

./: CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml  statsmodels_worker.py
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
test/sql/: statsmodels.test
tests/: harness.py  test_client.py  test_stats.py  test_tables.py
vgi_statsmodels/: __init__.py  buffering.py  meta.py  schema_utils.py  stats.py  tables.py  worker.py
