[project]
name = "vgi-statsmodels"
version = "0.1.0"
description = "Regression with full statistical inference (OLS, Logit, GLM) and hypothesis tests (t-test, ADF) for DuckDB via VGI"
readme = "README.md"
keywords = [
    "duckdb",
    "apache-arrow",
    "vgi",
    "sql",
    "statistics",
    "regression",
    "ols",
    "logistic-regression",
    "glm",
    "hypothesis-testing",
    "statsmodels",
    "patsy",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python[http]>=0.8.5",
    "statsmodels>=0.14",
    "patsy>=0.5",
    "numpy",
    "pandas",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "pydoclint",
]

[project.scripts]
vgi-statsmodels = "vgi_statsmodels.worker:main"
vgi-statsmodels-http = "vgi_statsmodels.worker:main_http"

[project.urls]
Homepage = "https://query.farm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_statsmodels"]

[tool.hatch.build.targets.sdist]
include = [
    "vgi_statsmodels/",
    "statsmodels_worker.py",
    "conftest.py",
    "tests/",
    "test/",
    "README.md",
    "CLAUDE.md",
    "LICENSE",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# statsmodels and patsy ship no type information; pandas and pyarrow ship
# py.typed but their public stubs are incomplete under --strict (untyped calls,
# missing stubs), so silence import/untyped-call noise from these libs only.
module = ["statsmodels.*", "patsy.*", "pandas.*", "pyarrow.*"]
ignore_missing_imports = true
